# CppRealTimeRayTracer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: Main.cpp
src/Acceleration/: Acceleration.cpp  Acceleration.h  BoundingBox.cpp  BoundingBox.h
src/Cameras/: Camera.cpp  Camera.h
src/Game/: Game.cpp  Game.h  InputManager.h
src/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h
src/Materials/: Material.cpp  Material.h
src/Math/: Constants.h  Double2.cpp  Double2.h  Double3.cpp  Double3.h  Double4.cpp  Double4.h  Int2.cpp  Int2.h  Quaternion.cpp  Quaternion.h  Ray.h
src/Rendering/: Avx.h  AvxDouble3.cpp  AvxDouble3.h  IntersectionData.h  RayPacket.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  Surface.cpp  Surface.h  Tile.cpp  Tile.h
src/Shapes/: Rect.cpp  Rect.h  Shape.h  Triangle.cpp  Triangle.h
src/Utilities/: File.h
src/World/: World.cpp  World.h
